# taipan

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  runme.bat
.github/workflows/: ci.yml
examples/: README.md  ai_captain.py
reference/: taipan-original.bas
scripts/: balance_sim.py  browser_smoke.py  make_favicon.py  make_og_image.py  smoke.py
static/: app.js  index.html  site.webmanifest  style.css
taipan/: __init__.py  engine.py
tests/: test_engine.py  test_server.py
